<resources>
    <string name="app_name">Workspace</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="start_float_view">start</string>
    <string name="stop_float_view">stop</string>
    <string name="nav_start_button">click to go</string>
    <string name="start_button">start navigation</string>
    <string name="btn_screen_shot">screen shot</string>
    <string name="btn_device_info">device info</string>
    <string name="btn_storage_info">storage info</string>
    <string name="btn_apps_info">apps info</string>
    <string name="btn_file_manager">file manager</string>

    <!-- main list string data -->
    <string name="main_data_torch">Torch</string>
    <string name="main_data_file_manager">File Manager</string>
    <string name="main_data_app_manager">App Manager</string>
    <string name="main_data_device_info">Device Info</string>
    <string name="main_data_litepal">Database</string>
    <string name="main_data_material_design">Material Design</string>

    <string name="permission_rational_title">Permission Rationale</string>
    <string name="permission_rational_message">"It's must"</string>

    <string name="litepal_button_add">add</string>
    <string name="litepal_button_delete">delete</string>
    <string name="litepal_button_update">update</string>
    <string name="litepal_button_query">query</string>
    <string name="litepal_button_show">show</string>
    <string name="title_activity_materail_design">MaterailDesignActivity</string>

    <string name="title_section1">Section 1</string>
    <string name="title_section2">Section 2</string>
    <string name="title_section3">Section 3</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_example">Example action</string>


</resources>
