<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.wangqiang.activitys.LitepalActivity"
    tools:layout_editor_absoluteY="81dp"
    tools:layout_editor_absoluteX="0dp">


    <TextView
        android:id="@+id/textView"
        android:layout_width="368dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:text="TextView"
        tools:layout_constraintTop_creator="1"
        android:layout_marginTop="35dp"
        tools:layout_constraintLeft_creator="1"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginLeft="8dp" />

    <Button
        android:id="@+id/button_add"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:onClick="add"
        android:text="@string/litepal_button_add"
        android:layout_marginLeft="8dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginBottom="32dp" />

    <Button
        android:id="@+id/button_update"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginLeft="0dp"
        android:onClick="update"
        android:text="@string/litepal_button_update"
        app:layout_constraintBaseline_toBaselineOf="@+id/button_delete"
        app:layout_constraintLeft_toRightOf="@+id/button_delete" />

    <Button
        android:id="@+id/button_delete"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_marginLeft="0dp"
        android:layout_marginStart="106dp"
        android:onClick="delete"
        android:text="@string/litepal_button_delete"
        app:layout_constraintBaseline_toBaselineOf="@+id/button_add"
        app:layout_constraintLeft_toRightOf="@+id/button_add"
        tools:layout_constraintBottom_creator="1"
        tools:layout_constraintLeft_creator="1" />

    <Button
        android:id="@+id/button_query"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:layout_marginLeft="0dp"
        android:layout_marginRight="8dp"
        android:onClick="query"
        android:text="@string/litepal_button_query"
        app:layout_constraintBaseline_toBaselineOf="@+id/button_update"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintLeft_toRightOf="@+id/button_update"
        app:layout_constraintRight_toRightOf="parent" />

</android.support.constraint.ConstraintLayout>
